Make core crate take database type at runtime
This simplifies snapshot testing.

Signed-off-by: Johannes Löthberg <johannes.loethberg@elokon.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,5 @@
 [workspace]
-members = [
-    "core",
-    "macros",
-]
+members = ["core", "macros"]
 
 [package]
 name = "sqlx-conditional-queries"
