--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -13,7 +13,5 @@ quote = "1.0.36"
 syn = { version = "2.0.75", features = ["extra-traits", "full"] }
 thiserror = "1.0.63"
 
-[features]
-mysql = []
-postgres = []
-sqlite = []
+[dev-dependencies]
+rstest = "0.24.0"
