--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -10,7 +10,7 @@ license = "MIT OR Apache-2.0"
 proc-macro = true
 
 [dependencies]
-proc-macro-error = "1.0.4"
+proc-macro-error2 = "2.0.1"
 proc-macro2 = "1.0.92"
 sqlx-conditional-queries-core = { path = "../core", version = "0.3" }
 
