--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["core", "macros"]
+members = ["core", "macros", "examples/pagination"]
 
 [package]
 name = "sqlx-conditional-queries"
